fix media query for product image on smaller devices

--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -25,7 +25,7 @@
 }
 
 .image {
-    height: 16rem;
+    width: max(16rem, 100%);
 }
 
 .name {
